--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,13 @@
 *{
   margin: 0;
   padding: 0;
+  text-decoration: none;
 }
 
 body {
   display: flex;
   flex-direction: column;
-  padding: 0.1rem;
-  background-color: whitesmoke;
+  background-color: white;
+  width: 100%;
 }
 
