--- a/src/style/NavBar.css
+++ b/src/style/NavBar.css
@@ -1,24 +1,15 @@
-.flexV{
-  display: flex;
-  flex-direction: column;
-}
-
-.flexH{
-  display: flex;
-}
-
 .titleContainer {
 justify-content: center;
 align-items: center;
+padding-left: 2rem;
+padding-right: 2rem;
 }
 
-.titleContainer h1{
-  font-size: 30px;
-  text-decoration: underline;
-  font-style: oblique;
-  font-weight: 700;
-  transform: rotate(-6deg);
-  font-family: cursive, sans-serif;
+.titleContainer img{
+  width: 100%;
+  height: 100%;
+  transform: scale(0.7);
+  cursor: pointer;
 }
 
 li {
@@ -39,12 +30,25 @@ li {
 }
 
 .navList {
+  margin-top: -2rem;
   justify-content: space-between;
   gap: 2rem;
+  text-transform: uppercase;
 }
 
 .navList li {
-  padding-left: 2rem;
+  display: flex;
+  /* background-color:#97BF11; */
+  /* padding: 0.8rem;
+  padding-left: 1.5rem; */
+  margin-left: 0.9rem;
+}
+
+
+.activeLink {
+  padding: 0.8rem;
+  padding-left: 1.5rem;
+  background-color: red;
 }
 
 .navigation.hidden {
@@ -76,11 +80,19 @@ a {
   text-decoration: none;
 }
 
+
+
+.navList li a{
+  color: black;
+  width: 100%;
+}
+
 .active {
-  background-color: green;
+  background-color:#97BF11;
   color: white;
   text-decoration: none;
-  padding: 7px;
+  padding: 0.8rem;
+  padding-left: 1.5rem;
 }
 
 footer{
