--- a/src/style/motorcycle.css
+++ b/src/style/motorcycle.css
@@ -6,17 +6,23 @@
 }
 
 .motorcycleItemPicture{
-    width: 55%;
-    height: 55%;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     justify-self: center;
+    cursor: pointer;
 }
+
 .motorcycleItemPicture img {
     width: 100%;
     height: 100%;
     border-radius: 100%;
-    border: 1px dashed red;
+    transition: 1s 0.5s ease-in-out;
+}
+
+.motorcycleItemPicture img:hover {
+    transform: scale(1.1);
 }
 
 .motorcycleItemNameModel {
