--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,16 @@
 }
 
 body {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: auto;
   background-color: white;
-  width: 100%;
 }
 
+.hiddenScroll{
+  overflow: hidden;
+}
+
+button {
+  border: transparent;
+  cursor: pointer;
+}
