--- a/src/style/login.css
+++ b/src/style/login.css
@@ -18,13 +18,21 @@ gap: 2rem;
 }
 
 .formContainer div {
-gap: 0.4rem;
+gap: 0.5rem;
 }
 
 .formContainer div input {
     padding: 0.7rem;
     border-radius: 5px;
+    transition: all 1s ease-in-out;
 }
+
+.formContainer div input:focus{
+  border-color: #97BF11;
+  outline-style: dotted;
+  box-shadow: 2px 2px 5px 0 #748d0f88;
+}
+
 
 select {
     padding: 0.7rem;
@@ -55,24 +63,10 @@ select {
     color: black;
   }
 
-  .logoutingContainer {
-    height: 20%;
-    background-color: white;
-    border: 1px solid #96bf119a;
-    /* padding-left: 1rem; */
-    padding-top: 1rem;
-    align-items: center;
-    justify-content: center;
-    margin: -3rem 0.2rem 0.2rem 0.2rem;
-    gap: 2rem;
-  }
-
-  .logoutingContainer p{
-    color: black;
-  }
   .logoutBtn {
     padding: 0.8rem;
     color: white;
+    background-color: red;
   }
 
   .logoutButtonContainer {
@@ -81,5 +75,9 @@ select {
 
   #signUp {
     background-color:#97BF11;
+    color: white;
+  }
+
+  #logoutLi {
     color: white;
   }
