--- a/src/style/motorcycle.css
+++ b/src/style/motorcycle.css
@@ -45,6 +45,7 @@
 .motorcycleForm {
     display: grid;
     grid-template-columns: 50fr 50fr;
+    grid-template-rows: 100fr;
     margin: 2rem 1rem 1rem 1rem;
     column-gap: 2rem;
     row-gap: 2rem;
@@ -98,3 +99,4 @@
 .addMottorcycleContainer {
     margin-top: 1rem;
 }
+
