add redux for manage the reserve global state

--- a/src/style/reserve.css
+++ b/src/style/reserve.css
@@ -122,3 +122,9 @@ cursor: pointer;
 #btnSubmitReserve {
   background-color: blue;
 }
+
+.reserveItem {
+  margin: 2rem;
+  gap: 1rem;
+  justify-content: space-between;
+}
