--- a/src/style/reserve.css
+++ b/src/style/reserve.css
@@ -2,19 +2,21 @@
   background-size: 100%;
   background-position: center;
   background-size: cover;
-  height: 100vh;
+  /* height: 100vh; */
+  /* background-color: red; */
   background-image: url('../img/VESPA_YELLOW.jpg');
   color: white;
 }
 
 .reserveDiv {
-  background-color: #97BF11;
+  /* background-color: #97BF11; */
   width: 100%;
-  padding: 0.5rem 6rem 0 6rem; 
+  /* padding: 0 6rem 0 6rem;  */
   color: white;
+  height: inherit;
 }
 
-.reserveContainer header {
+/* .reserveContainer header {
   background-color: #97BF11;
   opacity: 0.9;
   display: flex;
@@ -24,8 +26,7 @@
   color: white;
   font-weight: bolder;
   font-size: 20px;
-  cursor: pointer;
-}
+} */
 
 .glassContainer {
   display: flex;
@@ -37,30 +38,36 @@
   border-radius: 16px;
 }
 
-#glass{
-transform: rotateY(180deg);
+#glass,
+#hamburrguerIcon {
+  cursor: pointer;
 }
 
-.hide {
-  display: none;
+#glass {
+  transform: rotateY(180deg);
 }
 
 .reseveBodyContainer {
-  height: 100%;
-  background-color: #97BF11;
+  height: 100vh;
+  /* background-color: red; */
   opacity: 0.9;
 }
 
 .reseverNavbarContainer .navContainer .navList .active {
-  background-color:black;
+  background-color: black;
   color: #fff;
   text-decoration: none;
-  padding: 0.8rem;
+  /* padding: 0.8rem; */
   padding-left: 1.5rem;
 }
 
 .reseverNavbarContainer {
-  width: 21%;
+  /* width: 21%; */
+  transition: all 1s 1s ease-in-out;
+}
+
+.reseverNavbarContainer::content {
+  background-color: red;
 }
 
 .reserveTime {
@@ -78,7 +85,7 @@ transform: rotateY(180deg);
   width: 100%;
 }
 
-.reseverNavbarContainer .navContainer .footerNav{
+.reseverNavbarContainer .navContainer .footerNav {
   color: black;
 }
 
@@ -94,13 +101,14 @@ transform: rotateY(180deg);
 #toPay {
   color: black;
   transition: all 1s ease-in-out;
-  margin-left: 3rem;
+  margin-left: 5%;
+  font-size: 15px;
 }
 
 #toPay:hover {
-color: rgba(184, 25, 25, 0.829);
-background-color: white;
-cursor: pointer;
+  color: rgba(184, 25, 25, 0.829);
+  background-color: white;
+  cursor: pointer;
 }
 
 .checkContainer label {
@@ -127,4 +135,92 @@ cursor: pointer;
   margin: 2rem;
   gap: 1rem;
   justify-content: space-between;
+}
+
+.checkContainer {
+  width: fit-content;
+}
+
+.reservesItemListContainer {
+  height: inherit;
+  overflow-y: scroll;
+  padding-top: 2rem;
+}
+
+.reserveContainerContent {
+  /* height: 100vh; */
+  display: grid;
+  /* display: flex; */
+  opacity: 0.9;
+  height: 100vh;
+  background-color: #97BF11;
+  height: inherit;
+  /* padding-bottom: 0.1rem; */
+}
+
+.formReserve {
+  margin-top: 4rem;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+.revervesTableContainer {
+  /* background-color: rgb(160, 86, 86); */
+  padding: 1rem;
+  /* justify-items: center; */
+}
+
+.reservesTableHead {
+  display: grid;
+  grid-template-columns: 30fr 40fr 30fr;
+  background-color: #96bf11e1;
+  color: white;
+  padding: 1rem;
+  border-radius: 8px;
+}
+
+.reservesTableBody {
+  padding: 1rem;
+}
+
+.reservationItem {
+  display: grid;
+  grid-template-columns: 30fr 40fr 30fr;
+  padding: 1rem;
+  border: 1px dashed #97BF11;
+  margin-top: 0.5rem;
+  border-radius: 8px;
+  transition: all 2s ease-in-out;
+  text-transform: capitalize;
+}
+
+.reservationItem:hover {
+  background-color: #a8c548;
+  color: white;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+
+.reserveFormHeader {
+  display: none;
+}
+
+@media screen and (min-width:768px) {
+  .reserveFormHeader {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 1rem 0 1rem;
+    align-items: center;
+  }
+
+  .reseverNavbarContainer {
+    width: 21%;
+    }
+ 
+  .hide {
+    display: none;
+  }
+  .reserveContainerContent {
+    grid-template-rows: 5fr 95fr;
+  }
 }
