--- a/src/style/login.css
+++ b/src/style/login.css
@@ -1,33 +1,51 @@
-.loginContainer {
-    height: 100vh;
-    justify-content: center;
-    background-image: url('../img/yellowVespa.webp');
+@media screen and (min-width:768px) {
+  .loginContainer {
+    background-image: url('../img/giorniVespa.webp');
     background-position: 700px;
-    background-repeat: no-repeat;
     background-size: 70%;
+  }
+  .logoutButtonContainer {
+    gap: 1rem;
+  }
 }
 
-.loginDiv{
-    display: flex;
-    flex-direction: column;
-    align-self: center;
+.loginContainer {
+  height: 100vh;
+  justify-content: center;
+  background-image: url('../img/yellowVespa.webp');
+  background-position: calc(100% + 50px);
+  background-repeat: no-repeat;
+  background-size: calc(70% + 15px);
+}
+
+.logoutButtonContainer {
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.loginDiv {
+  display: flex;
+  flex-direction: column;
+  align-self: center;
 }
 
 .formContainer {
-gap: 2rem;
+  gap: 2rem;
 }
 
 .formContainer div {
-gap: 0.5rem;
+  gap: 0.5rem;
 }
 
 .formContainer div input {
-    padding: 0.7rem;
-    border-radius: 5px;
-    transition: all 1s ease-in-out;
+  padding: 0.7rem;
+  opacity: 0.8;
+  border-radius: 5px;
+  transition: all 1s ease-in-out;
 }
 
-.formContainer div input:focus{
+.formContainer div input:focus,
+select:focus {
   border-color: #97BF11;
   outline-style: dotted;
   box-shadow: 2px 2px 5px 0 #748d0f88;
@@ -35,49 +53,54 @@ gap: 0.5rem;
 
 
 select {
-    padding: 0.7rem;
-    border-radius: 5px;
-  }
+  padding: 0.7rem;
+  border-radius: 5px;
+  transition: all 1s ease-in-out;
+}
 
-  .loginButtons {
-    gap: 8px;
-    align-items: center;
-  }
+.loginButtons {
+  gap: 8px;
+  align-items: center;
+}
 
-  .infoParagraph {
-    background-color: rgb(207, 207, 112);
-    padding: 1rem;
-    margin-top: 1rem;
-    text-align: center;
-    align-self: center;
-    border-radius: 16px;
-  }
+.infoParagraph {
+  background-color: rgb(207, 207, 112);
+  padding: 1rem;
+  margin-top: 1rem;
+  text-align: center;
+  align-self: center;
+  border-radius: 16px;
+}
 
-  #loginBtn{
-    background-color:#97BF11;
-    color:white;
-  }
+#loginBtn {
+  background-color: #97BF11;
+  color: white;
+}
 
-  #logoutLi{
-    cursor: pointer;
-    color: black;
-  }
+#logoutLi {
+  cursor: pointer;
+  color: black;
+}
 
-  .logoutBtn {
-    padding: 0.8rem;
-    color: white;
-    background-color: red;
-  }
+.logoutBtn {
+  padding: 0.8rem;
+  color: white;
+  background-color: red;
+}
 
-  .logoutButtonContainer {
-    gap: 1rem;
-  }
 
-  #signUp {
-    background-color:#97BF11;
-    color: white;
-  }
+#signUp {
+  background-color: #97BF11;
+  color: white;
+}
 
-  #logoutLi {
-    color: white;
-  }
+#logoutLi {
+  color: white;
+}
+
+.loginInfoContainer {
+  width: 30%;
+  align-self: flex-start;
+  margin-top: -10%;
+  margin-left: 4%;
+}
