--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,400;0,700;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+KR:wght@900&display=swap');
 *{
   margin: 0;
   padding: 0;
@@ -5,9 +6,9 @@
 }
 
 body {
-  display: grid;
-  grid-template-columns: auto;
-  background-color: white;
+  display: flex;
+  flex-direction: column;
+  font-family: 'Lato', sans-serif;
 }
 
 .hiddenScroll{
