--- a/src/style/mainSection.css
+++ b/src/style/mainSection.css
@@ -126,10 +126,10 @@
     border-bottom-left-radius: 40px;
 }
 
-.mainBodyHeader p {
+.mainBodyHeader h5 {
 font-family: 'Noto Sans KR', sans-serif;
 font-size: 13px;
-color: rgba(163, 162, 162, 0.685);
+color: rgba(163, 162, 162, 0.884);
 }
 
 
